test/fixtures/architecture-conformance/negative/cycles/cycle-c.ts
import './cycle-a';

export const cycleC = 'c';